gccida/c0/get_last_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value/src/combine.c:11987:35: error: use of undeclared identifier 'machine_mode'
return gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), value); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value/src/combine.c:11987:50: error: expected expression
return gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa), value); 
                                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_last_value/src/obj/combine.o] Error 1
